[gd_scene load_steps=9 format=3 uid="uid://b1k1si4vlki42"]

[ext_resource type="Script" uid="uid://d2lvnjcuwsoxy" path="res://scripts/droid.gd" id="1_3qyvh"]
[ext_resource type="PackedScene" uid="uid://cx6x2pwoqp8mm" path="res://scenes/projectile.tscn" id="2_b6sar"]
[ext_resource type="Script" uid="uid://p0s2wxxv800u" path="res://scripts/fall_animation_config.gd" id="2_bwfj3"]
[ext_resource type="Texture2D" uid="uid://dn5pmbswkuxau" path="res://assets/art/droid_one_v1.png" id="2_jmph3"]
[ext_resource type="AudioStream" uid="uid://clpx4kmaxqc3y" path="res://assets/sfx/Enemy shooting.mp3" id="4_lu340"]

[sub_resource type="Resource" id="Resource_svcmp"]
script = ExtResource("2_bwfj3")
angle_duration = 1.0
scale_duration = 1.0
alpha_duration = 1.0
angle_target = 9.42478
scale_target = Vector2(0, 0)
alpha_target = 0.0
metadata/_custom_type_script = "uid://p0s2wxxv800u"

[sub_resource type="CircleShape2D" id="CircleShape2D_jmph3"]
radius = 1211.44

[sub_resource type="CircleShape2D" id="CircleShape2D_b6sar"]
radius = 27.0185

[node name="Droid" type="CharacterBody2D"]
collision_layer = 2
collision_mask = 0
script = ExtResource("1_3qyvh")
fall_animation_config = SubResource("Resource_svcmp")
projectile_scene = ExtResource("2_b6sar")

[node name="Sprite2D" type="Sprite2D" parent="."]
rotation = 1.5708
scale = Vector2(3, 3)
texture = ExtResource("2_jmph3")

[node name="DetectionArea" type="Area2D" parent="."]
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectionArea"]
shape = SubResource("CircleShape2D_jmph3")

[node name="ShootTimer" type="Timer" parent="."]
wait_time = 0.4

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_b6sar")

[node name="ShootSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_lu340")
attenuation = 0.812252
panning_strength = 2.0
bus = &"Misc"

[connection signal="body_entered" from="DetectionArea" to="." method="_on_detection_area_body_entered"]
[connection signal="body_exited" from="DetectionArea" to="." method="_on_detection_area_body_exited"]
[connection signal="timeout" from="ShootTimer" to="." method="_on_shoot_timer_timeout"]
